@@ -7,6 +7,7 @@
 - 2021-02-24                                -
 ---------------------------------------------
 .: WSM: Task: Adding invoice tracking dot (WSM-305)
+.: WSM: Task: Add ready status in invoice track (WSM-306)
 
 ---------------------------------------------
 - 2021-02-22                                -
